<resources>
    <string name="app_name">欧咪</string>
    <string name="empty"></string>
    <!--下拉刷新 上拉加载更多-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <!--主页-->
    <string name="message">消息</string>
    <string name="contacts">通讯录</string>
    <string name="phone">电话</string>
    <string name="discover">发现</string>
    <string name="myself">我的</string>
    <string name="my_dynamic">我的动态</string>
    <string name="collect">我的收藏</string>
    <string name="flow_recharge">流量充值</string>
    <string name="phone_recharge">话费充值</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="myself_taobao">淘宝</string>
    <string name="myself_weipinhui">唯品会</string>
    <string name="myself_jingdong">京东</string>
    <string name="myself_jumei">聚美</string>
    <string name="myself_more">更多</string>
    <string name="near_people">附近的人</string>
    <string name="qr_scan">扫一扫</string>
    <string name="account">账号：</string>
    <!--更多面板-->
    <string name="chat_board_text_picture">相册</string>
    <string name="chat_board_text_voice">语音聊天</string>
    <string name="chat_board_text_video">视频聊天</string>
    <string name="chat_board_text_location">位置</string>
    <string name="chat_board_text_collect">我的收藏</string>
    <string name="chat_board_text_idcard">名片</string>
    <!--动态-->
    <string name="signature">个性签名：</string>
    <string name="dynamic">动态</string>
    <string name="dynamic_share">转发</string>
    <string name="dynamic_comment">评论</string>
    <string name="dynamic_praise">赞</string>
    <string name="show_all">显示全部</string>
    <string name="show_little">收起</string>
    <string name="top_left_click">topLeftClick</string>
    <string name="top_right_click">topRightClick</string>
    <string name="search">搜索</string>
    <string name="press_speak">按住说话</string>
    <string name="relax_send">松开发送</string>
    <string name="relax_over">松开取消</string>
    <string name="send">发送</string>
    <!--位置选择-->
    <string name="confirm">确定</string>
    <string name="select_location">选择位置</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="none_net_availabel">当前没有可用网络,请检查网络设置</string>
    <string name="login_failed">登录失败，请重新输入</string>
    <string name="wrong_phone">请输入正确的手机号</string>
    <string name="wrong_password">请输入正确的密码</string>
    <string name="wrong_verification">请输入正确的验证码</string>
    <string name="wrong_repassword">两次密码不一致</string>
    <string name="find_password">找回密码</string>
    <string name="menu_action_group">发起群聊</string>
    <string name="menu_action_add">添加朋友</string>
    <string name="menu_action_scan">扫一扫</string>
    <string name="add_friend">添加朋友</string>
    <string name="scan_qr_card">扫描二维码名片</string>
    <string name="my_omi">我的欧咪号：</string>
    <string name="phone_contact">手机通讯录</string>
    <string name="wrong_userid">用户参数错误</string>
    <string name="user_info">详细资料</string>
    <string name="remark">备注:</string>
    <string name="area">地区</string>
    <string name="set_remark">设置备注</string>
    <string name="send_message">发消息</string>
    <string name="request_hint">你需要发送验证申请，等待对方通过</string>
    <string name="remark_hint">设置备注</string>
    <string name="user_on_contact">对方在手机通信录中的名字为“</string>
    <string name="fill">填入</string>
    <string name="friend_circle_power_hint">设置朋友圈权限</string>
    <string name="didnt_give_power">不让他（她）看我的动态</string>
    <string name="suth_reason">验证申请</string>
    <string name="my_group">我的群</string>
    <string name="new_friend">新朋友</string>
    <string name="receive">接受</string>
    <string name="decline">拒绝</string>
    <string name="has_added">已添加</string>
    <string name="has_decline">已拒绝</string>
    <string name="reason_hint">对方请求添加你为朋友</string>
    <string name="cancle">取消</string>
    <string name="short_time">时间太短</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="boy">男</string>
    <string name="call_self">不能给自己打电话</string>
    <string name="wating">正在建立连接</string>
    <string name="publish_dynamic">发表动态</string>
    <string name="dynamic_hint">亲！有什么新鲜事赶紧发表吧...</string>
    <string name="camera_wrong">摄像头出错</string>
    <string name="wrong_qr">用户不存在或已被封禁</string>
    <string name="qr_scan_hint">扫一扫上面的二维码图案，加我为好友</string>
    <string name="self_center">个人中心</string>
    <string name="fbz_member_avatar">头像</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="nickname">昵称</string>
    <string name="_account">账号</string>
    <string name="_signature">个性签名</string>
    <string name="my_qrcard">我的二维码</string>
    <string name="not_fill">未填写</string>
    <string name="no_sd">没有可用的存储卡</string>
    <string name="select_head">头像选择</string>
    <string name="take_photo">拍照</string>
    <string name="select_album">从相册选择</string>
    <string name="save">保存</string>
    <string name="omi_friend">欧咪好友</string>
    <string name="publish">发表</string>
    <string name="_close">关闭</string>
    <string name="small_app">小应用</string>

    <string name="type0">购物类</string>
    <string name="type1">直播类</string>
    <string name="type2">餐饮类</string>
    <string name="type3">音乐类</string>
    <string name="type4">出行类</string>

    <!--更多app-->
    <string name="app_12306">12306</string>
    <string name="app_dididache">滴滴打车</string>
    <string name="app_douyu">斗鱼</string>
    <string name="app_eleme">饿了么</string>
    <string name="app_jingdong">京东</string>
    <string name="app_jumei">聚美优品</string>
    <string name="app_kugouynyue">酷狗音乐</string>
    <string name="app_meituan">美团</string>
    <string name="app_qqyinyue">QQ音乐</string>
    <string name="app_taobao">淘宝</string>
    <string name="app_wangyiyun">网易云音乐</string>
    <string name="app_weipinhui">唯品会</string>
    <string name="app_xiami">虾米音乐</string>
    <string name="app_xiongmaotv">熊猫直播</string>
    <string name="app_yihaodian">一号店</string>
    <string name="app_youbu">优步</string>
    <string name="app_yy">YY</string>
    <!--更多appurl-->
    <string name="appurl_12306">http://m.12306.com/</string>
    <string name="appurl_dididache">http://m.didichuxing.com/</string>
    <string name="appurl_douyu">https://m.douyu.com</string>
    <string name="appurl_eleme">https://m.ele.me</string>
    <string name="appurl_jingdong">https://m.jd.com</string>
    <string name="appurl_jumei">http://m.jumei.com</string>
    <string name="appurl_kugouynyue">http://m.kugou.com</string>
    <string name="appurl_meituan">http://i.meituan.com/</string>
    <string name="appurl_qqyinyue">https://m.y.qq.com/</string>
    <string name="appurl_taobao">https://m.taobao.com</string>
    <string name="appurl_wangyiyun">http://music.163.com/m/</string>
    <string name="appurl_weipinhui">https://m.vip.com</string>
    <string name="appurl_xiami">http://h.xiami.com/</string>
    <string name="appurl_xiongmaotv">https://m.panda.tv/</string>
    <string name="appurl_yihaodian">http://m.yhd.com</string>
    <string name="appurl_youbu">https://m.uber.com/</string>
    <string name="appurl_yy">http://m.yy.com</string>
    <string name="screen">筛选</string>
    <string name="near_see_me">是否允许附近的人看到我</string>
    <string name="girl">女</string>
    <string name="all">全部</string>
    <string name="screen00to10">00一10</string>
    <string name="screen10to20">10一20</string>
    <string name="screen20to30">20一30</string>
    <string name="screen30to40">30一40</string>
    <string name="screen40to50">40一50</string>
    <string name="screen50to60">50一60</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="call_history">通话记录</string>
    <string name="select_group">选择一个群</string>
    <string name="start_group_chat">发起群聊</string>
    <string name="group_info">群组信息</string>
    <string name="group_name">群名称</string>
    <string name="group_member">群成员</string>
    <string name="top_chat">置顶聊天</string>
    <string name="not_disturb">消息免打扰</string>
    <string name="exit_group">退出群组</string>
    <string name="destroy_group">解散群组</string>
    <string name="group_qr">群二维码</string>
    <string name="none_group">群组不存在</string>
    <!--支付结果-->
    <string name="pay_success">支付成功</string>
    <string name="none_ali">未检测到支付宝</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancle">支付被取消</string>
    <string name="pay_waiting">支付结果确认中</string>
    <string name="wrong_money">请输入正确的金额</string>
</resources>
