<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="screenDialog"
            type="com.omi.ui.widget.PeopleScreenDialog"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginLeft="13dp"
                  android:layout_marginRight="13dp"
                  android:background="@drawable/shape_box_white_3"
                  android:orientation="vertical"
                  android:padding="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen"
            android:textColor="@color/text_color"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sex"
            android:textColor="@color/text_color"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setSex(@string/boy)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boy"
                    android:textColor="@{screenDialog.sex.equalsIgnoreCase(@string/boy)?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@{screenDialog.sex.equalsIgnoreCase(@string/boy)?@drawable/screen_select_pressed:@drawable/screen_select_normal}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setSex(@string/girl)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/girl"
                    android:textColor="@{screenDialog.sex.equalsIgnoreCase(@string/girl)?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@{screenDialog.sex.equalsIgnoreCase(@string/girl)?@drawable/screen_select_pressed:@drawable/screen_select_normal}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setSex(@string/all)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textColor="@{screenDialog.sex==null?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@{screenDialog.sex==null?@drawable/screen_select_pressed:@drawable/screen_select_normal}"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/age"
            android:textColor="@color/text_color"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setAgeAt(0)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen00to10"
                    android:textColor="@{screenDialog.ageAt==0?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setAgeAt(1)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen10to20"
                    android:textColor="@{screenDialog.ageAt==1?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setAgeAt(2)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen20to30"
                    android:textColor="@{screenDialog.ageAt==2?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setAgeAt(3)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen30to40"
                    android:textColor="@{screenDialog.ageAt==3?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setAgeAt(4)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen40to50"
                    android:textColor="@{screenDialog.ageAt==4?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setAgeAt(5)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen50to60"
                    android:textColor="@{screenDialog.ageAt==5?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{()->screenDialog.setAgeAt(6)}"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textColor="@{screenDialog.ageAt==6?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/near_see_me"
            android:textColor="@color/text_color"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setNearVisibility(true)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@{screenDialog.nearVisibility?@color/main_color:@color/text_color}"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@{screenDialog.nearVisibility?@drawable/screen_select_pressed:@drawable/screen_select_normal}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{()->screenDialog.setNearVisibility(false)}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@{screenDialog.nearVisibility?@color/text_color:@color/main_color}"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="centerCrop"
                    android:src="@{screenDialog.nearVisibility?@drawable/screen_select_normal:@drawable/screen_select_pressed}"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->screenDialog.onConfirmClick()}"
                android:paddingRight="27dp"
                android:text="@string/confirm"
                android:textColor="@color/main_color"
                android:textSize="19sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->screenDialog.onCancelClick()}"
                android:paddingLeft="27dp"
                android:text="@string/cancle"
                android:textColor="@color/main_color"
                android:textSize="19sp"/>
        </LinearLayout>
    </LinearLayout>
</layout>